# llvm-project

./: .gitignore  CMakeLists.txt  README.md  codegen.cpp  glutloop.c  glutloop.cpp  graphic.c  graphic.cpp  interface.c  libs.h  libs.hpp  line.cpp  line.hpp  logic.c  logic.cpp  logic.ll  logloop.c  logloop.cpp  main.c  main.cpp  main2.ll  main3.ll  point.cpp  point.h  point.hpp  result.ll  scr.sh  test.cpp  vorcel.hpp  vordiag.hpp  vorline.hpp
glang/: 11.sh  CMakeLists.txt  grammar.y  interface.ll  l.lex  main.glang  main.ll  print.c  print.ll  test1.glang  test2.glang
glang examples/: 1.lex  1.sh  2.sh  2.y  3.lex  3.sh  3.y  4.lex  4.sh  4.y  5.sh  5.y  6.lex  6.sh  6.y  7.lex  7.sh  7.y  8.lex  8.sh  8.y  9.lex  9.sh  9.y
not_used/: line.cpp  logic_draft.cpp  pixel.hpp  vordiag.cpp
