cmake_minimum_required(VERSION 3.16)
project(llvm-project)
option(glut "GLUT or LOG loop" 1)
if (WIN32)
    link_directories(C:/Users/alex-/gcc/lib)
elseif (UNIX)
    set(CMAKE_CXX_FLAGS "-std=c++11")
endif()

set(CMAKE_CXX_COMPILER g++)
set(EXECUTABLE_OUTPUT_PATH build)
set(LIBRARY_OUTPUT_PATH build)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

if (NOT glut)
    add_executable(launcher graphic.cpp logic.cpp logloop.cpp)
else ()
    add_executable(launcher graphic.cpp logic.cpp glutloop.cpp)
endif()

if (WIN32)
    target_link_libraries(launcher PRIVATE freeglutd opengl32)
elseif (UNIX)
    target_link_libraries(launcher PRIVATE glut GLU GL) 
endif()